--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -59,13 +59,13 @@
     },
     "QuickTip": {
       "heading": "अपने क्रेडेंशियल्स को तुरंत डाउनलोड करने के लिए त्वरित सुझाव",
-      "toastText":"जल्द आ रहा है",
+      "toastText": "जल्द आ रहा है",
       "buttontext": "यहां क्लिक करें"
     },
     "Login": {
       "loginTitle": "लॉग इन करें",
-      "loginDescription":"अपने खाते से लॉग इन करें या अपनी साख तक पहुंचने के लिए अतिथि के रूप में जारी रखें।",
-      "loginNote":"अतिथि मोड में कुछ सुविधाएँ सीमित हो सकती हैं।",
+      "loginDescription": "अपने खाते से लॉग इन करें या अपनी साख तक पहुंचने के लिए अतिथि के रूप में जारी रखें।",
+      "loginNote": "अतिथि मोड में कुछ सुविधाएँ सीमित हो सकती हैं।",
       "loggingIn": "लॉगिन हो रहा है",
       "loginGoogle": "Google के साथ जारी रखें",
       "loginGuest": "अतिथि के रूप में जारी रखें"
@@ -139,7 +139,7 @@
   "IssuersPage": {
     "Intro": {
       "title": "अपने सत्यापन योग्य क्रेडेंशियल्स तक",
-      "title2":"आसानी से पहुंचें!",
+      "title2": "आसानी से पहुंचें!",
       "subTitle": "अपने क्रेडेंशियल्स को सुरक्षित रूप से डाउनलोड करें और तुरंत साझा करें।",
       "searchText": "जारीकर्ताओं को नाम से खोजें"
     },
@@ -292,81 +292,81 @@
       "description3": "2. कोई जारीकर्ता कॉन्फ़िगर नहीं किया गया है।",
       "description4": "किसी भी स्थिति में, समस्या के समाधान के लिए कृपया अपनी तकनीकी टीम से संपर्क करें।"
     },
-    "item8":{
+    "item8": {
       "title": "जब मैं Inji Wallet के वेब इंटरफ़ेस में सत्यापन योग्य क्रेडेंशियल (VC) जेनरेट करता हूँ, तो क्या होता है?",
-      "description1":"1. आप जारीकर्ता और क्रेडेंशियल का प्रकार चुनते हैं।",
-      "description2":"2. प्रमाणीकरण के लिए जारीकर्ता के लॉगिन पेज पर रीडायरेक्ट करता है।",
-      "description3":"3. लॉगिन के बाद, जारीकर्ता VC प्रदान करता है, जिसे ड्यूरियन का उपयोग करके JSON के रूप में सुरक्षित रूप से संग्रहीत किया जाता है।",
-      "description4":"4.VC विवरण और QR कोड के साथ एक PDF जेनरेट किया जाता है।",
-      "description5":"5.QR कोड आसान शेयरिंग के लिए VC स्टोरेज URL से लिंक होता है।"
+      "description1": "1. आप जारीकर्ता और क्रेडेंशियल का प्रकार चुनते हैं।",
+      "description2": "2. प्रमाणीकरण के लिए जारीकर्ता के लॉगिन पेज पर रीडायरेक्ट करता है।",
+      "description3": "3. लॉगिन के बाद, जारीकर्ता VC प्रदान करता है, जिसे ड्यूरियन का उपयोग करके JSON के रूप में सुरक्षित रूप से संग्रहीत किया जाता है।",
+      "description4": "4.VC विवरण और QR कोड के साथ एक PDF जेनरेट किया जाता है।",
+      "description5": "5.QR कोड आसान शेयरिंग के लिए VC स्टोरेज URL से लिंक होता है।"
     },
-    "item9":{
-      "title":"क्रेडेंशियल PDF में QR कोड की क्या भूमिका है?",
-      "description1":"PDF में QR कोड सुरक्षित VC स्टोरेज URL से लिंक होता है, जिससे सघन डेटा के बिना क्रेडेंशियल को स्कैन करना और पुनर्प्राप्त करना आसान हो जाता है।"
+    "item9": {
+      "title": "क्रेडेंशियल PDF में QR कोड की क्या भूमिका है?",
+      "description1": "PDF में QR कोड सुरक्षित VC स्टोरेज URL से लिंक होता है, जिससे सघन डेटा के बिना क्रेडेंशियल को स्कैन करना और पुनर्प्राप्त करना आसान हो जाता है।"
     },
-    "item10":{
-      "title":"इनजी वॉलेट का वेब इंटरफ़ेस कैसे सुनिश्चित करता है कि मेरा VC सुरक्षित रूप से संग्रहीत है?",
-      "description1":"MOSIP ID प्लेटफ़ॉर्म से डेटा शेयर सेवा (ड्यूरियन) के साथ एकीकृत करता है, VC को JSON ऑब्जेक्ट के रूप में संग्रहीत करता है, जिसमें केवल अधिकृत सत्यापनकर्ताओं के लिए पहुँच सुरक्षित होती है।"
+    "item10": {
+      "title": "इनजी वॉलेट का वेब इंटरफ़ेस कैसे सुनिश्चित करता है कि मेरा VC सुरक्षित रूप से संग्रहीत है?",
+      "description1": "MOSIP ID प्लेटफ़ॉर्म से डेटा शेयर सेवा (ड्यूरियन) के साथ एकीकृत करता है, VC को JSON ऑब्जेक्ट के रूप में संग्रहीत करता है, जिसमें केवल अधिकृत सत्यापनकर्ताओं के लिए पहुँच सुरक्षित होती है।"
     },
-    "item11":{
-      "title":"ऑनलाइन शेयरिंग सुविधा इनजी वेरिफाई के साथ कैसे काम करती है?",
-      "description1":"1. VC PDF में एक QR कोड होता है।",
-      "description2":"2. PDF को प्रिंट किया जा सकता है या फ़ोन पर सहेजा जा सकता है।",
-      "description3":"3. सत्यापनकर्ता (जैसे, इनजी वेरिफाई) QR कोड को स्कैन करता है।",
-      "description4":"4. इनजी वॉलेट VC को अधिकृत करता है और सत्यापनकर्ता के साथ साझा करता है।"
+    "item11": {
+      "title": "ऑनलाइन शेयरिंग सुविधा इनजी वेरिफाई के साथ कैसे काम करती है?",
+      "description1": "1. VC PDF में एक QR कोड होता है।",
+      "description2": "2. PDF को प्रिंट किया जा सकता है या फ़ोन पर सहेजा जा सकता है।",
+      "description3": "3. सत्यापनकर्ता (जैसे, इनजी वेरिफाई) QR कोड को स्कैन करता है।",
+      "description4": "4. इनजी वॉलेट VC को अधिकृत करता है और सत्यापनकर्ता के साथ साझा करता है।"
     },
-      "item12":{
-      "title":"पूर्ण VC डेटा के बजाय QR कोड में URL क्यों एम्बेड करें?",
-      "description1":"URL एम्बेड करने से आसान स्कैनिंग के लिए QR कोड घनत्व कम हो जाता है, जिससे कुशल क्रॉस-डिवाइस या रिमोट सत्यापन की सुविधा मिलती है।"
+    "item12": {
+      "title": "पूर्ण VC डेटा के बजाय QR कोड में URL क्यों एम्बेड करें?",
+      "description1": "URL एम्बेड करने से आसान स्कैनिंग के लिए QR कोड घनत्व कम हो जाता है, जिससे कुशल क्रॉस-डिवाइस या रिमोट सत्यापन की सुविधा मिलती है।"
     },
-    "item13":{
-      "title":"क्या मैं अपना VC ऑनलाइन और ऑफ़लाइन दोनों तरह से साझा कर सकता हूँ?",
-      "description1":"1. ऑनलाइन : सत्यापनकर्ता PDF या फ़ोन स्क्रीन से स्कैन कर सकता है, और Inji Wallet VC को अधिकृत और साझा करता है।",
-      "description2":"2. ऑफ़लाइन : स्कैनिंग और VC पुनर्प्राप्ति के लिए मुद्रित PDF प्रस्तुत किया जा सकता है।"
+    "item13": {
+      "title": "क्या मैं अपना VC ऑनलाइन और ऑफ़लाइन दोनों तरह से साझा कर सकता हूँ?",
+      "description1": "1. ऑनलाइन : सत्यापनकर्ता PDF या फ़ोन स्क्रीन से स्कैन कर सकता है, और Inji Wallet VC को अधिकृत और साझा करता है।",
+      "description2": "2. ऑफ़लाइन : स्कैनिंग और VC पुनर्प्राप्ति के लिए मुद्रित PDF प्रस्तुत किया जा सकता है।"
     },
-    "item14":{
-      "title":"ऑनलाइन शेयरिंग के दौरान इंजी वॉलेट सत्यापनकर्ता को कैसे सत्यापित और अधिकृत करता है?",
-      "description1":"सत्यापनकर्ता क्रेडेंशियल्स की जाँच आंतरिक सूची से की जाती है। अधिकृत होने पर, वेब इंटरफ़ेस वाला इंजी वॉलेट vp_token का उपयोग करके VC को सुरक्षित रूप से सत्यापनकर्ता को वापस भेजता है।"
+    "item14": {
+      "title": "ऑनलाइन शेयरिंग के दौरान इंजी वॉलेट सत्यापनकर्ता को कैसे सत्यापित और अधिकृत करता है?",
+      "description1": "सत्यापनकर्ता क्रेडेंशियल्स की जाँच आंतरिक सूची से की जाती है। अधिकृत होने पर, वेब इंटरफ़ेस वाला इंजी वॉलेट vp_token का उपयोग करके VC को सुरक्षित रूप से सत्यापनकर्ता को वापस भेजता है।"
     },
-    "item15":{
-      "title":"OpenID4VP क्या है, और इसका उपयोग इंजी वॉलेट में कैसे किया जाता है?",
-      "description1":"OpenID4VP (सत्यापनीय प्रस्तुतियों के लिए OpenID) मानक VC को सुरक्षित रूप से साझा करने की अनुमति देता है। इंजी वॉलेट VC संग्रहण के लिए एक QR कोड बनाता है, जिससे इंजी वेरिफाई जैसे सत्यापनकर्ता सुरक्षित रूप से VC का अनुरोध और प्राप्त कर सकते हैं।"
+    "item15": {
+      "title": "OpenID4VP क्या है, और इसका उपयोग इंजी वॉलेट में कैसे किया जाता है?",
+      "description1": "OpenID4VP (सत्यापनीय प्रस्तुतियों के लिए OpenID) मानक VC को सुरक्षित रूप से साझा करने की अनुमति देता है। इंजी वॉलेट VC संग्रहण के लिए एक QR कोड बनाता है, जिससे इंजी वेरिफाई जैसे सत्यापनकर्ता सुरक्षित रूप से VC का अनुरोध और प्राप्त कर सकते हैं।"
     },
-    "item16":{
-      "title":"मैं कैसे जान सकता हूँ कि मेरा VC Inji Wallet का उपयोग करके सुरक्षित रूप से साझा किया गया था??",
-      "description1":"सत्यापनकर्ता द्वारा QR कोड को स्कैन करने और Inji Wallet द्वारा इसे अधिकृत करने के बाद, VC को सत्यापनकर्ता को सुरक्षित रूप से प्रदान किया जाता है, जो फिर इसे सत्यापित और पुष्टि करता है।"
+    "item16": {
+      "title": "मैं कैसे जान सकता हूँ कि मेरा VC Inji Wallet का उपयोग करके सुरक्षित रूप से साझा किया गया था??",
+      "description1": "सत्यापनकर्ता द्वारा QR कोड को स्कैन करने और Inji Wallet द्वारा इसे अधिकृत करने के बाद, VC को सत्यापनकर्ता को सुरक्षित रूप से प्रदान किया जाता है, जो फिर इसे सत्यापित और पुष्टि करता है।"
     },
-    "item17":{
-      "title":"क्या होगा यदि QR कोड को VC जनरेट किए गए डिवाइस से अलग डिवाइस पर स्कैन किया जाता है?",
-      "description1":"क्रॉस-डिवाइस शेयरिंग का समर्थन करता है। सत्यापनकर्ता VC PDF की किसी भी कॉपी से स्कैन कर सकता है, और Inji Wallet VC को सुरक्षित रूप से सत्यापित और साझा करता है।"
+    "item17": {
+      "title": "क्या होगा यदि QR कोड को VC जनरेट किए गए डिवाइस से अलग डिवाइस पर स्कैन किया जाता है?",
+      "description1": "क्रॉस-डिवाइस शेयरिंग का समर्थन करता है। सत्यापनकर्ता VC PDF की किसी भी कॉपी से स्कैन कर सकता है, और Inji Wallet VC को सुरक्षित रूप से सत्यापित और साझा करता है।"
     },
-    "item18":{
-      "title":"क्या Inji Wallet अलग-अलग QR कोड फ़ॉर्मेट को सपोर्ट कर सकता है?",
-      "description1":"हां. कॉन्फ़िगरेशन-आधारित जेनरेशन QR कोड में या तो शामिल हो सकता है: ",
-      "description2":"1. आसान शेयरिंग के लिए VC स्टोरेज का URL, या ",
-      "description3":"2. JSON (सघन फ़ॉर्मेट) में पूरा VC डेटा।"
+    "item18": {
+      "title": "क्या Inji Wallet अलग-अलग QR कोड फ़ॉर्मेट को सपोर्ट कर सकता है?",
+      "description1": "हां. कॉन्फ़िगरेशन-आधारित जेनरेशन QR कोड में या तो शामिल हो सकता है: ",
+      "description2": "1. आसान शेयरिंग के लिए VC स्टोरेज का URL, या ",
+      "description3": "2. JSON (सघन फ़ॉर्मेट) में पूरा VC डेटा।"
     },
-    "item19":{
-      "title":"शेयरिंग के बाद Inji Wallet क्रेडेंशियल वेरिफिकेशन को कैसे हैंडल करता है?",
-      "description1":"शेयरिंग के बाद, Inji Verify VC प्रामाणिकता की जांच करता है. अगर मान्य है, तो वेरिफायर क्रेडेंशियल की वेरिफिकेशन स्थिति की पुष्टि करता है।"
+    "item19": {
+      "title": "शेयरिंग के बाद Inji Wallet क्रेडेंशियल वेरिफिकेशन को कैसे हैंडल करता है?",
+      "description1": "शेयरिंग के बाद, Inji Verify VC प्रामाणिकता की जांच करता है. अगर मान्य है, तो वेरिफायर क्रेडेंशियल की वेरिफिकेशन स्थिति की पुष्टि करता है।"
     },
-    "item20":{
-      "title":"किस तरह के क्रेडेंशियल जारीकर्ता समर्थित हैं?",
-      "description1":"कोई भी जारीकर्ता जो OpenID4VCI प्रोटोकॉल का पालन करता है, उस पर Inji Wallet में भरोसा किया जा सकता है। ये जारीकर्ता VC जारी करने और डाउनलोड करने के लिए आवश्यक डेटा प्रदान करते हैं।"
+    "item20": {
+      "title": "किस तरह के क्रेडेंशियल जारीकर्ता समर्थित हैं?",
+      "description1": "कोई भी जारीकर्ता जो OpenID4VCI प्रोटोकॉल का पालन करता है, उस पर Inji Wallet में भरोसा किया जा सकता है। ये जारीकर्ता VC जारी करने और डाउनलोड करने के लिए आवश्यक डेटा प्रदान करते हैं।"
     },
     "item21": {
       "title": "मैं इस रिलीज़ में पेश की गई सुविधाओं के बारे में अधिक विस्तृत जानकारी कहाँ पा सकता हूँ?",
       "description1": "विस्तृत चरणों, सिस्टम अवलोकन और नई सुविधाओं के विवरण के लिए <a href=\"https://docs.mosip.io/inji/inji-web/overview\" target=\"_blank\">Inji Wallet दस्तावेज़</a> देखें।"
     },
-    "item22":{
-      "title":"मैं इंजी वॉलेट में ऑनलाइन शेयरिंग सुविधा का उपयोग कैसे शुरू करूँ?",
-      "description1":"इंजी वॉलेट के वेब इंटरफ़ेस के माध्यम से VC तक पहुँचें, डाउनलोड करें, और सत्यापनकर्ताओं के साथ व्यक्तिगत रूप से या ऑनलाइन क्रेडेंशियल साझा करने के लिए QR कोड का उपयोग करें। <a href=\"https://docs.mosip.io/inji/inji-web/functional-overview/end-user-guide\" target=\"_blank\"> उपयोगकर्ता मार्गदर्शिका </a> में विवरण।"
+    "item22": {
+      "title": "मैं इंजी वॉलेट में ऑनलाइन शेयरिंग सुविधा का उपयोग कैसे शुरू करूँ?",
+      "description1": "इंजी वॉलेट के वेब इंटरफ़ेस के माध्यम से VC तक पहुँचें, डाउनलोड करें, और सत्यापनकर्ताओं के साथ व्यक्तिगत रूप से या ऑनलाइन क्रेडेंशियल साझा करने के लिए QR कोड का उपयोग करें। <a href=\"https://docs.mosip.io/inji/inji-web/functional-overview/end-user-guide\" target=\"_blank\"> उपयोगकर्ता मार्गदर्शिका </a> में विवरण।"
     },
-    "item23":{
-      "title":"मैं इंजी वॉलेट में एम्बेडेड VC और ऑनलाइन शेयरिंग के बीच कैसे टॉगल कर सकता हूँ?",
-      "description1":"मिमोटो जारीकर्ता की सेटिंग में qr_code_type कॉन्फ़िगर करें: ",
-      "description2":"1. EmbeddedVC: ऑफ़लाइन उपयोग के लिए JSON फ़ॉर्मेट (घने QR कोड) में पूर्ण VC एम्बेड करता है।",
-      "description3":"2. OnlineSharing: ऑनलाइन VC स्टोरेज के लिए URL के साथ एक QR कोड जेनरेट करता है, जिससे इसे स्कैन करना और ऑनलाइन शेयर करना आसान हो जाता है।"
+    "item23": {
+      "title": "मैं इंजी वॉलेट में एम्बेडेड VC और ऑनलाइन शेयरिंग के बीच कैसे टॉगल कर सकता हूँ?",
+      "description1": "मिमोटो जारीकर्ता की सेटिंग में qr_code_type कॉन्फ़िगर करें: ",
+      "description2": "1. EmbeddedVC: ऑफ़लाइन उपयोग के लिए JSON फ़ॉर्मेट (घने QR कोड) में पूर्ण VC एम्बेड करता है।",
+      "description3": "2. OnlineSharing: ऑनलाइन VC स्टोरेज के लिए URL के साथ एक QR कोड जेनरेट करता है, जिससे इसे स्कैन करना और ऑनलाइन शेयर करना आसान हो जाता है।"
     }
   },
   "DataShareExpiryModal": {
@@ -481,34 +481,38 @@
     }
   },
   "VerifierTrustPage": {
-      "modal": {
-        "title": "अज्ञात सत्यापनकर्ता",
-        "domain": "verify.gov.in",
-        "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
-        "point1": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
-        "point2": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
-        "point3": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
-        "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
-        "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
-        "cancelButton": "रद्द करें",
-        "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
-        "infoTooltipText": "सत्यापनकर्ता पर भरोसा करने से उन्हें आपकी साख का अनुरोध करने की अनुमति मिलती है। अगले चरण में साझा करने के लिए आप अभी भी साख का चयन करेंगे।"
-      },
-      "cancelConfirmationModal": {
-        "title": "क्या आप वाकई रद्द करना चाहते हैं?",
-        "description": "यदि आप इसे रद्द करते हैं, तो आपका अनुरोध संसाधित नहीं होगा और खो सकता है।",
-        "confirmButton": "हाँ, रद्द करें",
-        "goBackButton": "वापस जाएँ"
-      },
-      "UserAuthorizationPage": {
-        "validateVerifierError": "सत्यापनकर्ता अनुरोध को सत्यापित करने में विफल रहा। कृपया पुन: प्रयास करें।",
-        "invalidVerifierResponse": "अमान्य सत्यापनकर्ता प्रतिक्रिया प्राप्त हुई।",
-        "addTrustedVerifierError": "सत्यापनकर्ता को विश्वसनीय सूची में जोड़ने में विफल रहा।"
-      },
-      "ErrorCard": {
-        "defaultTitle": "त्रुटि",
-        "defaultDescription": "कुछ गलत हो गया। कृपया पुन: प्रयास करें।",
-        "closeButton": "बंद करें"
-      }
+    "modal": {
+      "title": "अज्ञात सत्यापनकर्ता",
+      "domain": "verify.gov.in",
+      "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
+      "point1": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
+      "point2": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
+      "point3": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
+      "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
+      "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
+      "cancelButton": "रद्द करें",
+      "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
+      "infoTooltipText": "सत्यापनकर्ता पर भरोसा करने से उन्हें आपकी साख का अनुरोध करने की अनुमति मिलती है। अगले चरण में साझा करने के लिए आप अभी भी साख का चयन करेंगे।"
+    },
+    "cancelConfirmationModal": {
+      "title": "क्या आप वाकई रद्द करना चाहते हैं?",
+      "description": "यदि आप इसे रद्द करते हैं, तो आपका अनुरोध संसाधित नहीं होगा और खो सकता है।",
+      "confirmButton": "हाँ, रद्द करें",
+      "goBackButton": "वापस जाएँ"
+    },
+    "UserAuthorizationPage": {
+      "validateVerifierError": "सत्यापनकर्ता अनुरोध को सत्यापित करने में विफल रहा। कृपया पुन: प्रयास करें।",
+      "invalidVerifierResponse": "अमान्य सत्यापनकर्ता प्रतिक्रिया प्राप्त हुई।",
+      "addTrustedVerifierError": "सत्यापनकर्ता को विश्वसनीय सूची में जोड़ने में विफल रहा।"
+    },
+    "ErrorCard": {
+      "defaultTitle": "त्रुटि",
+      "defaultDescription": "कुछ गलत हो गया। कृपया पुन: प्रयास करें।",
+      "closeButton": "बंद करें"
+    },
+    "loadingCard": {
+      "title": "सत्यापनकर्ता जानकारी लाई जा रही है...",
+      "subtitle": "कृपया प्रतीक्षा करें जब तक हम अनुरोध को सत्यापित करते हैं और आपकी साख तैयार करते हैं।"
     }
+  }
 }
