--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -509,6 +509,10 @@
       "defaultTitle": "ದೋಷ",
       "defaultDescription": "ಏನೋ ತಪ್ಪಾಗಿದೆ. ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ.",
       "closeButton": "ಮುಚ್ಚಿ"
+    },
+    "loadingCard": {
+      "title": "ವಿತರಣೆದಾರರ ಮಾಹಿತಿಯನ್ನು ಪಡೆಯಲಾಗುತ್ತಿದೆ...",
+      "subtitle": "ದಯವಿಟ್ಟು ನಾವು ವಿನಂತಿಯನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಸಿದ್ಧಪಡಿಸುವವರೆಗೆ ಕಾಯಿರಿ."
     }
   }
 }
