--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -509,6 +509,10 @@
       "defaultTitle": "பிழை",
       "defaultDescription": "ஏதோ தவறு நடந்துவிட்டது. மீண்டும் முயற்சிக்கவும்.",
       "closeButton": "மூடு"
+    },
+    "loadingCard": {
+      "title": "வழங்கி தகவலைப் பெறுகிறது...",
+      "subtitle": "நாங்கள் கோரிக்கையைச் சரிபார்த்து, உங்கள் சான்றுகளைத் தயாரிக்கும் வரை காத்திருக்கவும்."
     }
   }
 }
