--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -483,11 +483,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "مدقق غير معروف",
-      "domain": "verify.gov.in",
       "description": "تأكد من أنك تتعرف على هذا المدقق أو تثق به. \nبمجرد أن تثق بهذا المدقق:",
-      "point1": "سيتم حفظ البطاقة بأمان في محفظتك.",
-      "point2": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
-      "point3": "لن تحتاج إلى مراجعة الثقة مرة أخرى عند التنزيل منهم في المرة القادمة.",
+      "benefitSaveSecurely": "سيتم حفظ البطاقة بأمان في محفظتك.",
+      "benefitAddToTrustedList": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
+      "benefitSkipReviewFuture": "لن تحتاج إلى مراجعة الثقة مرة أخرى عند التنزيل منهم في المرة القادمة.",
       "trustButton": "نعم، أنا أثق بهذا المدقق",
       "notTrustButton": "لا، أنا لا أثق بهذا المدقق",
       "cancelButton": "إلغاء",
