--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -483,11 +483,10 @@
   "VerifierTrustPage": {
       "modal": {
         "title": "Verifier Name",
-        "domain": "verify.gov.in",
         "description": "Make sure you recognize or trust this verifier. \nOnce you trust this Verifier:",
-        "point1": "The card will be securely saved in your wallet.",
-        "point2": "This verifier will be added to your trusted list.",
-        "point3": "You won’t need to review trust again when downloading from them next time.",
+        "benefitSaveSecurely": "The card will be securely saved in your wallet.",
+        "benefitAddToTrustedList": "This verifier will be added to your trusted list.",
+        "benefitSkipReviewFuture": "You won’t need to review trust again when downloading from them next time.",
         "trustButton": "Yes, I trust this Verifier",
         "notTrustButton": "No, I don’t trust this Verifier",
         "cancelButton": "Cancel",
