--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -483,11 +483,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "अज्ञात सत्यापनकर्ता",
-      "domain": "verify.gov.in",
       "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
-      "point1": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
-      "point2": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
-      "point3": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
+      "benefitSaveSecurely": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
+      "benefitAddToTrustedList": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
+      "benefitSkipReviewFuture": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
       "trustButton": "हाँ, मैं इस सत्यापनकर्ता पर भरोसा करता हूँ",
       "notTrustButton": "नहीं, मैं इस सत्यापनकर्ता पर भरोसा नहीं करता हूँ",
       "cancelButton": "रद्द करें",
