--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -483,11 +483,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "ಅಪರಿಚಿತ ವಿತರಕ",
-      "domain": "verify.gov.in",
       "description": "ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ಗುರುತಿಸುತ್ತೀರಿ ಅಥವಾ ನಂಬುತ್ತೀರಿ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಒಮ್ಮೆ ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬಿದರೆ:",
-      "point1": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
-      "point2": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
-      "point3": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
+      "benefitSaveSecurely": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
+      "benefitAddToTrustedList": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
+      "benefitSkipReviewFuture": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
       "trustButton": "ಹೌದು, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುತ್ತೇನೆ",
       "notTrustButton": "ಇಲ್ಲ, ನಾನು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದಿಲ್ಲ",
       "cancelButton": "ರದ್ದುಮಾಡು",
