--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -483,11 +483,10 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "அறியப்படாத வழங்குநர்",
-      "domain": "verify.gov.in",
       "description": "இந்த வழங்குநரை நீங்கள் அங்கீகரிக்கிறீர்கள் அல்லது நம்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும். \nநீங்கள் இந்த வழங்குநரை நம்பிய பிறகு:",
-      "point1": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
-      "point2": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
-      "point3": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
+      "benefitSaveSecurely": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
+      "benefitAddToTrustedList": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
+      "benefitSkipReviewFuture": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
       "trustButton": "ஆம், நான் இந்த வழங்கியை நம்புகிறேன்",
       "notTrustButton": "இல்லை, நான் இந்த வழங்கியை நம்பவில்லை",
       "cancelButton": "ரத்துசெய்",
