[injiweb-1714]:Updated cancelConfirmationModal and removed the client side login check
Signed-off-by: jaswanthkumarpolisetty <jaswanthkumar.p@thoughtworks.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -493,7 +493,7 @@
       "infoTooltipButton": "ماذا تعني الثقة؟",
       "infoTooltipText": "إن الثقة في المدقق تسمح له بطلب بيانات الاعتماد الخاصة بك. ستظل تختار بيانات الاعتماد التي تريد مشاركتها في الخطوة التالية."
     },
-    "cancelConfirmationModal": {
+    "TrustRejectionModal": {
       "title": "هل أنت متأكد أنك تريد الإلغاء؟",
       "description": "إذا قمت بالإلغاء، فلن تتم معالجة طلبك وقد يُفقد.",
       "confirmButton": "نعم، إلغاء",
