--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -493,7 +493,7 @@
       "infoTooltipButton": "भरोसा करने का क्या मतलब है?",
       "infoTooltipText": "सत्यापनकर्ता पर भरोसा करने से उन्हें आपकी साख का अनुरोध करने की अनुमति मिलती है। अगले चरण में साझा करने के लिए आप अभी भी साख का चयन करेंगे।"
     },
-    "cancelConfirmationModal": {
+    "TrustRejectionModal": {
       "title": "क्या आप वाकई रद्द करना चाहते हैं?",
       "description": "यदि आप इसे रद्द करते हैं, तो आपका अनुरोध संसाधित नहीं होगा और खो सकता है।",
       "confirmButton": "हाँ, रद्द करें",
