--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -493,7 +493,7 @@
       "infoTooltipButton": "ನಂಬಿಕೆ ಇಡುವುದು ಅಂದರೆ ಏನು?",
       "infoTooltipText": "ವಿತರಣೆದಾರರನ್ನು ನಂಬುವುದು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಕೋರಲು ಅವರಿಗೆ ಅನುಮತಿಸುತ್ತದೆ. ಮುಂದಿನ ಹಂತದಲ್ಲಿ ಹಂಚಿಕೊಳ್ಳಲು ನೀವು ಯಾವ ರುಜುವಾತುಗಳನ್ನು ಆರಿಸುತ್ತೀರಿ."
     },
-    "cancelConfirmationModal": {
+    "TrustRejectionModal": {
       "title": "ನೀವು ಖಚಿತವಾಗಿ ರದ್ದುಮಾಡಲು ಬಯಸುತ್ತೀರಾ?",
       "description": "ನೀವು ಇದನ್ನು ರದ್ದುಮಾಡಿದರೆ, ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸಲಾಗುವುದಿಲ್ಲ ಮತ್ತು ಅದು ಕಳೆದುಹೋಗಬಹುದು.",
       "confirmButton": "ಹೌದು, ರದ್ದುಮಾಡು",
