--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -493,7 +493,7 @@
       "infoTooltipButton": "நம்புவது என்றால் என்ன?",
       "infoTooltipText": "ஒரு வழங்கியை நம்புவது, உங்கள் சான்றுகளைக் கோர அவர்களை அனுமதிக்கிறது. அடுத்த கட்டத்தில் பகிர வேண்டிய சான்றுகளை நீங்கள் இன்னும் தேர்வு செய்வீர்கள்."
     },
-    "cancelConfirmationModal": {
+    "TrustRejectionModal": {
       "title": "நீங்கள் ரத்துசெய்ய விரும்புகிறீர்களா?",
       "description": "நீங்கள் இதை ரத்துசெய்தால், உங்கள் கோரிக்கை செயலாக்கப்படாது மற்றும் அது இழக்கப்படலாம்.",
       "confirmButton": "ஆம், ரத்துசெய்",
